font-size fix, cutoff sections adjusted

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,9 +21,11 @@ section > * {
   background: url(../images/Landing.jpg) no-repeat center;
   background-size: cover;
 }
-.cutoff1,
+.cutoff1 {
+  margin-bottom: -1px;
+}
 .cutoff2 {
-  margin: 0;
+  margin-top: -1px;
 }
 .Logo {
   display: flex;
@@ -73,7 +75,7 @@ section > * {
     color: rgb(221, 221, 221) !important;
     padding-bottom: 68px;
     .links {
-      font-size: 1.2em;
+      font-size: 1.1em;
       margin: 0 1em 0;
     }
   }
@@ -207,6 +209,12 @@ section > * {
   .logo-svg {
     width: 15em;
   }
+  .cutoff1 {
+    margin-bottom: -1px;
+  }
+  .cutoff2 {
+    margin-top: -1px;
+  }
 }
 @media screen and (min-width: $break-sm) {
   .logo-svg {
@@ -241,7 +249,7 @@ section > * {
   }
 }
 
-@media screen and (min-width: $break-lg) { 
+@media screen and (min-width: $break-lg) {
   .Landing-title {
     font-size: 2.7em;
   }
